force-app/main/default/objects/custom_create105__c/custom_create105__c.object-meta.xml
<CustomObject>
    <label>Custom created object105</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects105</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>