force-app/main/default/objects/custom_create105__c/fields/custom_create_105field574__c.field-meta.xml
<CustomField>
    <fullName>custom_create_105field574__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 105field574</label>
    <type>Checkbox</type>
</CustomField>