force-app/main/default/objects/custom_create105__c/fields/custom_create_105field598__c.field-meta.xml
<CustomField>
    <fullName>custom_create_105field598__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 105field598</label>
    <type>Checkbox</type>
</CustomField>